# tasker.py

./: .gitignore  LICENSE  README.md  TPY - Run.tsk.xml  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: python-test.yml  test.yml
docs/: 01_example_template.md  index.md
docs/api/: app_info.md  env.md  task_collision.md  tasker.md  xml_utils.md
docs/templates/: example.md
src/tasker/: __init__.py  app_info.py  env.py  stream.py  task_collision.py  utils.py  xml_utils.py
src/tasker/actions/alert/: __init__.py  beep.py  flash.py  morse.py  notify.py  notify_cancel.py  say.py  say_to_file.py  say_wave_net.py  shut_up.py  torch.py  vibrate.py  vibrate_pattern.py
src/tasker/actions/variables/: __init__.py  variable_set.py
src/tasker/icons/: __init__.py  icon.py  misc.py  none_icon.py
src/tasker/profiles/: time.py
src/tasker/py/: __init__.py  action.py  client.py  event.py  main.py  profile.py  profile_variable.py  project.py  scene.py  task.py  toggle.py
src/tasker/types/: __init__.py  notify_led.py  stream.py
src/tasker/xml/: __init__.py  profile_xml.py  project_xml.py  scene_xml.py  task_xml.py  tasker_xml.py  xml_builder.py
tasker/: __init__.py  app_info.py  client.py  env.py  py.py  stream.py  xml_utils.py
tasker/actions/alert/: __init__.py  beep.py  flash.py  morse.py  notify.py  say.py
tasker/icons/: misc.py
tasker/py/: __init__.py  action.py  main.py  scene.py  task.py
test/: conftest.py  test_action.py  test_env.py  test_misc_icons.py  test_profile_xml.py  test_task_xml.py  test_tasker.py  test_xml_utils.py
test/__mock__/: task.xml
test/__mocks__/: beep.xml  flash.xml
test/__mocks__/profiles/: time.xml
test/__mocks__/tasks/: beep.xml  flash.xml  flash_profile_variables.xml
test/actions/: test_actions_not_error.py  test_beep.py  test_flash.py  test_notify.py
test/helpers/: str_exporter.py  xml_reader.py
tests/: test_action.py  test_beep.py  test_tasker.py  test_tasker_client.py
