[project]
name = "tasker.py"
version = "0.2.0"
description = "Automatize seu android com python"
authors = [
    {name = "Bruno Davi", email = "48166556+brunodavi@users.noreply.github.com"},
]

dependencies = [
    "httpx>=0.24.1",
    "cython>=3.0.0",
    "lxml>=4.9.3",
]

requires-python = ">=3.10"
license = {text = "MIT"}


[tool.pdm.scripts]
test_all.cmd = "pytest -vv -s"
test_all.env_file = ".env"

test.cmd = "pytest -vv -s -k test_ -k 'not test_action'"
test.env_file = ".env"

lint.shell = "blue --check --diff . && isort --check --diff ."
format.shell = "blue . && isort ."

docs = "mkdocs serve"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
]

linter = [
    "blue>=0.9.1",
    "isort>=5.12.0",
]
docs = [
    "mkdocs-material>=9.2.8",
    "mkdocstrings>=0.23.0",
    "mkdocstrings-python>=1.6.2",
    "mkdocs-macros-plugin>=1.0.4",
    "jinja2>=3.1.2",
]

[tool.isort]
profile = "black"
line_length = 79
